# Rust-Web-Synthesizer

./: .gitignore  Cargo.toml  README.md  Trunk.toml
src/: lib.rs  main.rs
src/oscillators/: mod.rs
src/utils/: mod.rs
synth/: Cargo.toml  index.html
synth-backend/: Cargo.toml  reference.md
synth-backend/src/: lib.rs  main.rs  ring_buffer.rs
synth-backend/src/envelopes/: mod.rs
synth-backend/src/filters/: mod.rs
synth-backend/src/lfo/: mod.rs
synth-backend/src/oscillators/: mod.rs
synth-backend/src/utils/: mod.rs
synth-backend/src/vibrato/: mod.rs
synth-backend/src/wrapper/: mod.rs
synth-frontend/: Cargo.toml
synth-frontend/src/: lib.rs  white_keys.css
synth-frontend/src/UI_components/: overall.css  style.css
synth-frontend/src/UI_components/key_controllers/: octave_change.css
synth-frontend/src/UI_components/keys/: black_keys.css  white_keys.css
synth-frontend/src/UI_components/selectors/: oscillator_selector.css  slider_envelope.css
synth-frontend/src/components/: mod.rs
synth-frontend/src/components/atoms/: black_keys.rs  button.rs  icon.rs  keyboard_listener.rs  keys.rs  knob.rs  mod.rs  slider.rs  white_keys.rs
synth-frontend/src/components/molecules/: add_button.rs  adsr_controls.rs  keys.rs  mod.rs  multi_selector.rs  remove_button.rs  selector.rs
synth-frontend/src/components/organisms/: envelope_settings.rs  filter_selector.rs  lfo_settings.rs  mod.rs  oscillator_selector.rs  selection_limitor.rs
synth/src/: lib.rs  main.rs
