[package]
name = "synth-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.17.2"
rand = "0.8.5"
rand_distr = "0.4.3"
# device_query = "2.0.0"
cpal = { version = "0.15.3", features = ["wasm-bindgen"]}
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
# wasm-bindgen = "0.2.45"
web-sys = { version = "0.3.69" }